# fastboop

./: .gitignore  .gitmodules  .packit.yaml  404.html  AGENTS.md  APKBUILD  CNAME  Cargo.toml  HACKING.md  README.md  fastboop.spec  index.html  justfile  k8s-infra.yaml  live-pocket-fedora.yaml  live-pocket-fedora.yaml.bootpro  mkdocs.yml  plan.md  pmos-fajita.yaml  pmos-fajita.yaml.bootpro  rust-toolchain.toml  sitemap.xml
.cargo/: config.gibblox-local.toml  config.local.toml  config.toml
.github/workflows/: alpine.yml  ci.yml  debian.yml  docs.yml  flatpak.yml  frontdoor.yml  issue-bump.yml  next-rc-on-merge.yml  opencode.yml  release.yml
assets/: win.fastboop.fastboop.desktop  win.fastboop.fastboop.metainfo.xml
cli/: Cargo.toml
cli/src/: boot_ui.rs  devpros.rs  erofs_rootfs.rs  main.rs  serial.rs  smoo_host.rs  stage0_binary.rs  tui.rs
cli/src/commands/: boot.rs  bootprofile.rs  channel.rs  detect.rs  devprofile.rs  mod.rs  show.rs  stage0.rs
crates/fastboop-bootpro/: Cargo.toml
crates/fastboop-bootpro/src/: lib.rs
crates/fastboop-cli/: Cargo.toml
crates/fastboop-cli/src/: main.rs  personalization.rs
crates/fastboop-cli/src/commands/: boot.rs  mod.rs
crates/fastboop-core/: Cargo.toml  build.rs
crates/fastboop-core/src/: block_reader.rs  boot_components.rs  boot_plan.rs  bootimg.rs  bootprofile.rs  builtin.rs  channel_index.rs  channel_intake.rs  channel_pipeline_hints.rs  channel_profile_bundle.rs  channel_stream.rs  device.rs  devpro.rs  fastboot.rs  lib.rs  personalization.rs  prober.rs  session.rs
crates/fastboop-core/tests/: bootprofile.rs  builtin_profiles.rs  channel_stream_fixture_harness.rs
crates/fastboop-environment-std/: Cargo.toml
crates/fastboop-environment-std/src/: channel.rs  devpro.rs  lib.rs  native.rs  native_smoo.rs  stage0_binary.rs
crates/fastboop-environment-web/: Cargo.toml
crates/fastboop-environment-web/src/: boot.rs  channel_source.rs  gibblox_worker.rs  js.rs  lib.rs  smoo.rs  startup.rs
crates/fastboop-environment-web/src/smoo_host_worker/: mod.rs  rpc.rs  runner.rs
crates/fastboop-erofs-rootfs/: Cargo.toml
crates/fastboop-erofs-rootfs/src/: lib.rs
crates/fastboop-ext4-rootfs/: Cargo.toml
crates/fastboop-ext4-rootfs/src/: lib.rs
crates/fastboop-fastboot-rusb/: Cargo.toml
crates/fastboop-fastboot-rusb/src/: lib.rs
crates/fastboop-fastboot-webusb/: Cargo.toml
crates/fastboop-fastboot-webusb/src/: native.rs  wasm.rs
crates/fastboop-rootfs-erofs/: Cargo.toml
crates/fastboop-rootfs-erofs/src/: lib.rs
crates/fastboop-rootfs-ext4/: Cargo.toml
crates/fastboop-rootfs-ext4/src/: lib.rs
crates/fastboop-schema/: Cargo.toml
crates/fastboop-schema/src/: bin.rs  lib.rs
crates/fastboop-serial/: Cargo.toml
crates/fastboop-serial/src/: lib.rs
crates/fastboop-session/: Cargo.toml
crates/fastboop-session/src/: lib.rs
crates/fastboop-smoo-gibblox/: Cargo.toml
crates/fastboop-smoo-gibblox/src/: lib.rs
crates/fastboop-stage0/: Cargo.toml
crates/fastboop-stage0-generator/: Cargo.toml  build.rs
crates/fastboop-stage0-generator/src/: kernel.rs  lib.rs
crates/fastboop-stage0/src/: lib.rs
crates/fastboop-transport/: Cargo.toml
crates/fastboop-transport-fastboot-rusb/: Cargo.toml
crates/fastboop-transport-fastboot-rusb/src/: lib.rs
crates/fastboop-transport-fastboot-webusb/: Cargo.toml
crates/fastboop-transport-fastboot-webusb/src/: native.rs  wasm.rs
crates/gibblox-cache/: Cargo.toml
crates/gibblox-core/: Cargo.toml
crates/smoo-host-blocksource-gibblox/: Cargo.toml
crates/smoo-host-blocksource-gibblox/src/: lib.rs
debian/: changelog  control  copyright  rules  watch
debian/upstream/: metadata
dev/: index.html
dev/BOOT_PROFILES/: index.html
dev/CONTRIBUTORS_INTRODUCTION/: index.html
dev/DEVICE_PROFILES/: index.html
dev/STAGE0/: index.html
dev/STAGE0_DISTRIBUTION/: index.html
devprofiles.d/: arrow-db410c.yaml  google-sargo.yaml  oneplus-enchilada.yaml  oneplus-fajita.yaml  samsung-gt510.yaml  shift-axolotl.yaml  xiaomi-beryllium-ebbg.yaml  xiaomi-beryllium-tianma.yaml
docs/: DEVICE_PROFILES.md  STAGE0.md  index.md  k8s-infra.yaml
docs/dev/: BOOT_PROFILES.md  CONTRIBUTORS_INTRODUCTION.md  DEVICE_PROFILES.md  STAGE0.md  STAGE0_DISTRIBUTION.md  SUBTREES.md  index.md
docs/plans/: CHANNELS.md  gibblox-pipelines.md  releasemachinery.md  u-boot-trampoline.md
docs/user/: device-permissions.md  faq.md  index.md  quick-start.md
erofs/: Cargo.toml
examples/: erofs_cat.rs
examples/single-page-web/: Cargo.toml  README.md  index.html
examples/single-page-web/rootfs/: mkosi.conf  mkosi.finalize
examples/single-page-web/src/: main.rs
flatpak/: com.samcday.fastboop.desktop  com.samcday.fastboop.metainfo.xml  com.samcday.fastboop.yml  win.fastboop.fastboop.yml
flatpak/modules/: crossbuild.yml  dtc.yml  stage0.yml  xdotool.yml
gibblox/: Cargo.toml  README.md
infra/frontdoor/: Cargo.toml  SPEC.md  rust-toolchain.toml
infra/frontdoor/crates/frontdoor-edge/: Cargo.toml
infra/frontdoor/crates/frontdoor-edge/src/: lib.rs
infra/frontdoor/crates/frontdoor-edge/wit/: world.wit
infra/k8s/: .sops.yaml  kustomization.yaml  kustomizeconfig.yaml  live-version.txt  namespaces.yaml  repositories.yaml
infra/tofu/: .terraform.lock.hcl  README.md  encryption.tf  main.tf  outputs.tf  terraform.tfstate  token.json  variables.tf  versions.tf  worker.js
plans/: chained-boots.md  kernel-tree-boot.md  releasemachinery.md
plans/CHANNELS/: index.html
plans/gibblox-pipelines/: index.html
plans/releasemachinery/: index.html
plans/u-boot-trampoline/: index.html
search/: search_index.json
stage0/: Cargo.toml
stage0/src/: main.rs  ostree.rs
tools/: cargo-local-gibblox.sh  cargo-local.sh  ci-local-deps.sh  dx-local-gibblox.sh  dx-local.sh  publish-crates.sh
tools/channels/: README.md  generate-fixtures.sh
user/: index.html
user/device-permissions/: index.html
user/faq/: index.html
user/quick-start/: index.html
xtask/: Cargo.toml
xtask/src/: channels.rs  check.rs  desktop_dev.rs  frontdoor_dev.rs  main.rs  release.rs  util.rs
(+82 files in other folders)
