[workspace]
members = [
    "cli",
    "stage0",
    "crates/fastboop-rootfs-erofs",
    "crates/fastboop-core",
    "crates/fastboop-schema",
    "crates/fastboop-stage0-generator",
    "crates/fastboop-fastboot-rusb",
    "crates/fastboop-fastboot-webusb",
    "packages/desktop",
    "packages/mobile",
    "packages/ui",
    "packages/web",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
rust-version = "1.88"
edition = "2024"
license = "GPL-3.0-only"

[workspace.dependencies]
dioxus = { version = "0.7.1" }
ui = { path = "packages/ui" }
fastboop-core = { path = "crates/fastboop-core" }
fastboop-schema = { path = "crates/fastboop-schema", default-features = false }
bitflags = "2"
memmap2 = { version = "0.9", default-features = false }
rustix = { version = "1", default-features = false }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
