[workspace]
members = [
    "cli",
    "stage0",
    "crates/fastboop-core",
    "crates/fastboop-schema",
    "crates/fastboop-stage0-generator",
    "crates/fastboop-fastboot-rusb",
    "crates/fastboop-fastboot-webusb",
    "packages/desktop",
    "packages/mobile",
    "packages/ui",
    "packages/web",
]
resolver = "2"

[workspace.package]
version = "0.0.1-rc.1"
rust-version = "1.88"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/samcday/fastboop"

[workspace.dependencies]
dioxus = { version = "0.7.1" }
ui = { path = "packages/ui" }
fastboop-core = { path = "crates/fastboop-core" }
fastboop-schema = { path = "crates/fastboop-schema", default-features = false }
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = "1.48.0"
tokio-util = "0.7.17"
url = "2.5.4"
serde_yaml = "0.9.34"
clap = { version = "4.5.21", features = ["derive"] }
bitflags = "2"
futures-core = "0.3.31"
futures-channel = "0.3.31"
futures = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
sha2 = { version = "0.10.9", default-features = false }
flate2 = { version = "1.1.5", default-features = false }
lzma-rs = "0.3.0"
ruzstd = "0.8.2"
reqwest = { version = "0.12.28", default-features = false }
libc = "0.2.177"
hyper = "0.14"
metrics-exporter-prometheus = { version = "0.13", default-features = false }
serde = "1.0.228"
usb-gadget = "0.7.6"
memmap2 = { version = "0.9", default-features = false }
rustix = { version = "1", default-features = false }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
