[workspace]
members = [
    "cli",
    "stage0",
    "crates/fastboop-core",
    "crates/fastboop-bootpro",
    "crates/fastboop-environment-std",
    "crates/fastboop-environment-web",
    "crates/fastboop-schema",
    "crates/fastboop-stage0-generator",
    "crates/fastboop-smoo-gibblox",
    "crates/fastboop-fastboot-rusb",
    "crates/fastboop-fastboot-webusb",
    "examples/single-page-web",
    "packages/desktop",
    "packages/mobile",
    "packages/ui",
    "packages/web",
    "xtask",
]
exclude = ["gibblox", "smoo"]
resolver = "2"

[workspace.package]
version = "0.0.1-rc.21"
rust-version = "1.91"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/samcday/fastboop"

[workspace.dependencies]
dioxus = { version = "0.7.1" }
ui = { path = "packages/ui" }
fastboop-core = { path = "crates/fastboop-core" }
fastboop-bootpro = { path = "crates/fastboop-bootpro", version = "0.0.1-rc.19" }
fastboop-environment-std = { path = "crates/fastboop-environment-std" }
fastboop-environment-web = { path = "crates/fastboop-environment-web" }
fastboop-schema = { path = "crates/fastboop-schema", default-features = false }
fastboop-smoo-gibblox = { path = "crates/fastboop-smoo-gibblox" }
gibblox-android-sparse = "0.0.2-rc.4"
gibblox-blockreader-messageport = "0.0.2-rc.4"
gibblox-cache = "0.0.2-rc.4"
gibblox-cache-store-opfs = "0.0.2-rc.4"
gibblox-cache-store-std = "0.0.2-rc.4"
gibblox-casync = "0.0.2-rc.4"
gibblox-casync-std = "0.0.2-rc.4"
gibblox-casync-web = "0.0.2-rc.4"
gibblox-core = { version = "0.0.2-rc.4", default-features = false }
gibblox-ext4 = "0.0.2-rc.4"
gibblox-file = "0.0.2-rc.4"
gibblox-http = { version = "0.0.2-rc.4", default-features = false }
gibblox-mbr = "0.0.2-rc.4"
gibblox-optimizer = "0.0.2-rc.4"
gibblox-pipeline = { version = "0.0.2-rc.4", default-features = false }
gibblox-tar = "0.0.2-rc.4"
gibblox-web-worker = "0.0.2-rc.4"
gibblox-xz = "0.0.2-rc.4"
gibblox-zip = "0.0.2-rc.4"
gobblytes-core = "0.0.2-rc.4"
gobblytes-erofs = "0.0.2-rc.4"
gobblytes-fat = "0.0.2-rc.4"
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = "1.48.0"
tokio-util = "0.7.17"
url = "2.5.4"
serde_yaml = "0.9.34"
clap = { version = "4.5.21", features = ["derive"] }
bitflags = "2"
futures-core = "0.3.31"
futures-channel = "0.3.31"
futures = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
js-sys = "=0.3.82"
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "=0.4.55"
web-sys = "=0.3.82"
sha2 = { version = "0.10.9", default-features = false }
flate2 = { version = "1.1.5", default-features = false }
lzma-rs = "0.3.0"
ruzstd = "0.8.2"
reqwest = { version = "0.12.28", default-features = false }
libc = "0.2.177"
hyper = "0.14"
metrics-exporter-prometheus = { version = "0.13", default-features = false }
serde = "1.0.228"
usb-gadget = "0.7.6"
memmap2 = { version = "0.9", default-features = false }
rustix = { version = "1", default-features = false }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"

[patch.crates-io]
gibblox-android-sparse = { path = "gibblox/crates/gibblox-android-sparse" }
gibblox-blockreader-messageport = { path = "gibblox/crates/gibblox-blockreader-messageport" }
gibblox-cache = { path = "gibblox/crates/gibblox-cache" }
gibblox-cache-store-opfs = { path = "gibblox/crates/gibblox-cache-store-opfs" }
gibblox-cache-store-std = { path = "gibblox/crates/gibblox-cache-store-std" }
gibblox-casync = { path = "gibblox/crates/gibblox-casync" }
gibblox-casync-std = { path = "gibblox/crates/gibblox-casync-std" }
gibblox-casync-web = { path = "gibblox/crates/gibblox-casync-web" }
gibblox-core = { path = "gibblox/crates/gibblox-core" }
gibblox-ext4 = { path = "gibblox/crates/gibblox-ext4" }
gibblox-file = { path = "gibblox/crates/gibblox-file" }
gibblox-http = { path = "gibblox/crates/gibblox-http" }
gibblox-mbr = { path = "gibblox/crates/gibblox-mbr" }
gibblox-optimizer = { path = "gibblox/crates/gibblox-optimizer" }
gibblox-pipeline = { path = "gibblox/crates/gibblox-pipeline" }
gibblox-schema = { path = "gibblox/crates/gibblox-schema" }
gibblox-tar = { path = "gibblox/crates/gibblox-tar" }
gibblox-web-worker = { path = "gibblox/crates/gibblox-web-worker" }
gibblox-xz = { path = "gibblox/crates/gibblox-xz" }
gibblox-zip = { path = "gibblox/crates/gibblox-zip" }
gobblytes-core = { path = "gibblox/crates/gobblytes-core" }
gobblytes-erofs = { path = "gibblox/crates/gobblytes-erofs" }
gobblytes-fat = { path = "gibblox/crates/gobblytes-fat" }
smoo-gadget-app = { path = "smoo/crates/smoo-gadget-app" }
smoo-gadget-core = { path = "smoo/crates/smoo-gadget-core" }
smoo-gadget-ublk = { path = "smoo/crates/smoo-gadget-ublk" }
smoo-host-core = { path = "smoo/crates/smoo-host-core" }
smoo-host-session = { path = "smoo/crates/smoo-host-session" }
smoo-host-transport-rusb = { path = "smoo/crates/smoo-host-transport-rusb" }
smoo-host-webusb = { path = "smoo/crates/smoo-host-webusb" }
smoo-proto = { path = "smoo/crates/smoo-proto" }
