[package]
name = "fastboop-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for non-mutating live boots on fastboot-class devices."

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-x86_64-unknown-linux-musl.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-aarch64-unknown-linux-musl.tar.gz"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
fastboop-core = { path = "../crates/fastboop-core", version = ">=0.0.1-rc.1" }
fastboop-stage0-generator = { path = "../crates/fastboop-stage0-generator", version = ">=0.0.1-rc.1" }
fastboop-fastboot-rusb = { path = "../crates/fastboop-fastboot-rusb", version = ">=0.0.1-rc.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
gibblox-core = { version = ">=0.0.1-rc.8", features = ["std"] }
gibblox-ext4 = { version = ">=0.0.1-rc.8" }
gibblox-mbr = { version = ">=0.0.1-rc.8", features = ["std"] }
gibblox-casync = { version = ">=0.0.1-rc.8", features = ["std"] }
gibblox-casync-std = { version = ">=0.0.1-rc.8" }
gibblox-cache = { version = ">=0.0.1-rc.8", features = ["std"] }
gibblox-cache-store-std = { version = ">=0.0.1-rc.8" }
gibblox-file = { version = ">=0.0.1-rc.8" }
gibblox-http = { version = ">=0.0.1-rc.8", default-features = false, features = ["native-client"] }
gibblox-android-sparse = { version = ">=0.0.1-rc.8", features = ["std"] }
gibblox-xz = { version = ">=0.0.1-rc.8", features = ["std"] }
gibblox-zip = { version = ">=0.0.1-rc.8", features = ["std"] }
gobblytes-core = { version = ">=0.0.1-rc.8" }
gobblytes-erofs = { version = ">=0.0.1-rc.8" }
gobblytes-fat = { version = ">=0.0.1-rc.8" }
smoo-host-core = { version = ">=0.0.1-rc.1" }
smoo-host-session = { version = ">=0.0.1-rc.1" }
smoo-host-transport-rusb = { version = ">=0.0.1-rc.1" }
smoo-host-blocksource-gibblox = { version = ">=0.0.1-rc.1" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { workspace = true }
url = { workspace = true }
ratatui = "0.29.0"
crossterm = "0.28.1"
