[package]
name = "fastboop-cli"
autobins = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for non-mutating live boots on fastboot-class devices."

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-x86_64-unknown-linux-musl.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-aarch64-unknown-linux-musl.tar.gz"

[[bin]]
name = "fastboop"
path = "src/main.rs"

[features]
default = []
embed-stage0 = ["fastboop-environment-std/embed-stage0"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fastboop-core = { path = "../crates/fastboop-core", version = "0.0.1-rc.12" }
fastboop-bootpro = { workspace = true }
fastboop-environment-std = { workspace = true }
fastboop-session = { workspace = true }
serde_yaml = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { workspace = true }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", optional = true }

[dev-dependencies]
gibblox-pipeline = { version = "0.0.2-rc.3", features = ["std"] }
