[package]
name = "fastboop-cli"
autobins = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for non-mutating live boots on fastboot-class devices."

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-x86_64-unknown-linux-musl.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-aarch64-unknown-linux-musl.tar.gz"

[[bin]]
name = "fastboop"
path = "src/main.rs"

[features]
default = []
embed-stage0 = ["fastboop-environment-std/embed-stage0"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fastboop-core = { path = "../crates/fastboop-core", version = "0.0.1-rc.12" }
fastboop-bootpro = { workspace = true }
fastboop-environment-std = { workspace = true }
serde_yaml = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
gibblox-core = { workspace = true, features = ["std"] }
gibblox-ext4 = { workspace = true }
gibblox-mbr = { workspace = true, features = ["std"] }
gibblox-casync = { workspace = true, features = ["std"] }
gibblox-casync-std = { workspace = true }
gibblox-file = { workspace = true }
gibblox-http = { workspace = true, default-features = false, features = ["native-client"] }
gibblox-cache = { workspace = true }
gibblox-cache-store-std = { workspace = true }
gibblox-pipeline = { workspace = true, features = ["std"] }
gibblox-android-sparse = { workspace = true, features = ["std"] }
gibblox-tar = { workspace = true, features = ["std"] }
gibblox-xz = { workspace = true, features = ["std"] }
gibblox-zip = { workspace = true, features = ["std"] }
gobblytes-core = { workspace = true }
gobblytes-erofs = { workspace = true }
gobblytes-fat = { workspace = true }
smoo-host-core = { version = "0.0.2-rc.6" }
smoo-host-session = { version = "0.0.2-rc.6" }
smoo-host-transport-rusb = { version = "0.0.2-rc.6" }
smoo-host-blocksource-gibblox = { version = "0.0.2-rc.6" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { workspace = true }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", optional = true }

[dev-dependencies]
gibblox-pipeline = { version = "0.0.2-rc.3", features = ["std"] }
