[package]
name = "fastboop-stage0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.20", features = ["derive"] }
libc = "0.2.177"
smoo-gadget-app = { path = "../smoo/crates/smoo-gadget-app" }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
usb-gadget = { version = "0.7.6", features = ["tokio"] }
