[package]
name = "fastboop-stage0"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
drm = "0.14.1"
libc = "0.2.177"
smoo-gadget-app = { path = "../smoo/crates/smoo-gadget-app" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
usb-gadget = { version = "0.7.6", features = ["tokio"] }
