[package]
name = "fastboop-bootpro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "std boot profile compilation and optimization helpers for fastboop."

[dependencies]
anyhow = { workspace = true }
fastboop-core = { path = "../fastboop-core", version = "0.0.1-rc.17" }
gibblox-android-sparse = { workspace = true, features = ["std"] }
gibblox-cache = { workspace = true }
gibblox-cache-store-std = { workspace = true }
gibblox-casync = { workspace = true, features = ["std"] }
gibblox-casync-std = { workspace = true }
gibblox-core = { workspace = true, features = ["std"] }
gibblox-file = { workspace = true }
gibblox-http = { workspace = true, default-features = false, features = ["native-client"] }
gibblox-mbr = { workspace = true, features = ["std"] }
gibblox-optimizer = { workspace = true }
gibblox-pipeline = { workspace = true, features = ["std"] }
gibblox-tar = { workspace = true, features = ["std"] }
gibblox-xz = { workspace = true, features = ["std"] }
serde_yaml = { workspace = true }
sha2 = { workspace = true, default-features = true }
