[package]
name = "fastboop-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.21", features = ["derive"] }
fastboop-core = { path = "../fastboop-core", features = ["std"] }
fastboop-stage0 = { path = "../fastboop-stage0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
