[package]
name = "fastboop-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastboop-schema = { workspace = true }
gibblox-core = { version = "=0.0.1-rc.6", default-features = false }
gibblox-pipeline = { version = "=0.0.1-rc.6", default-features = false }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }
tracing = { version = "0.1.44", default-features = false }

[build-dependencies]
fastboop-schema = { workspace = true }
postcard = { version = "1.1.3", features = ["alloc"] }
serde_yaml = { workspace = true }
