[package]
name = "fastboop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core profile matching and boot orchestration primitives for fastboop."

[dependencies]
async-trait = { workspace = true }
fastboop-schema = { path = "../fastboop-schema", version = "0.0.1-rc.12", default-features = false }
futures-util = { workspace = true, features = ["alloc"] }
gibblox-core = { workspace = true, default-features = false }
gibblox-ext4 = { workspace = true }
gibblox-pipeline = { workspace = true, default-features = false }
gobblytes-core = { workspace = true }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }
tracing = { version = "0.1.44", default-features = false }

[build-dependencies]
fastboop-schema = { path = "../fastboop-schema", version = "0.0.1-rc.12", default-features = false }
postcard = { version = "1.1.3", features = ["alloc"] }
serde_yaml = { workspace = true }
