[package]
name = "fastboop-environment-std"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standard host environment bindings for fastboop sessions."

[features]
default = []
embed-stage0 = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fastboop-core = { path = "../fastboop-core", version = "0.0.1-rc.12" }
fastboop-fastboot-rusb = { path = "../fastboop-fastboot-rusb", version = "0.0.1-rc.12" }
fastboop-smoo-gibblox = { workspace = true }
fastboop-stage0-generator = { path = "../fastboop-stage0-generator", version = "0.0.1-rc.12" }
gibblox-android-sparse = { version = "0.0.2-rc.3", features = ["std"] }
gibblox-casync = { version = "0.0.2-rc.3", features = ["std"] }
gibblox-casync-std = { version = "0.0.2-rc.3" }
gibblox-core = { version = "0.0.2-rc.3", features = ["std"] }
gibblox-ext4 = { version = "0.0.2-rc.3" }
gibblox-file = { version = "0.0.2-rc.3" }
gibblox-http = { version = "0.0.2-rc.3", default-features = false, features = ["native-client"] }
gibblox-mbr = { version = "0.0.2-rc.3", features = ["std"] }
gibblox-pipeline = { version = "0.0.2-rc.3", features = ["std"] }
gibblox-xz = { version = "0.0.2-rc.3", features = ["std"] }
gibblox-zip = { version = "0.0.2-rc.3", features = ["std"] }
gobblytes-core = { version = "0.0.2-rc.3" }
gobblytes-erofs = { version = "0.0.2-rc.3" }
gobblytes-fat = { version = "0.0.2-rc.3" }
hyper = { workspace = true, features = ["server", "http1", "tcp"] }
serde_yaml = { workspace = true }
smoo-host-core = { version = "0.0.2-rc.6" }
smoo-host-session = { version = "0.0.2-rc.6" }
smoo-host-transport-rusb = { version = "0.0.2-rc.6" }
tokio = { workspace = true, features = ["rt", "signal", "time"] }
tokio-util = { workspace = true }
tracing = "0.1.44"
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
