[package]
name = "fastboop-environment-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web browser environment bindings for fastboop sessions."

[dependencies]
anyhow = { workspace = true }
fastboop-core = { path = "../fastboop-core", version = "0.0.1-rc.12" }
fastboop-fastboot-webusb = { path = "../fastboop-fastboot-webusb", version = "0.0.1-rc.12" }
fastboop-session = { path = "../fastboop-session", version = "0.0.1-rc.12" }
fastboop-stage0-generator = { path = "../fastboop-stage0-generator", version = "0.0.1-rc.12" }
futures-channel = { workspace = true }
gibblox-core = { version = "0.0.2-rc.3" }
tracing = "0.1.44"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-util = { workspace = true, features = ["alloc", "async-await"] }
gibblox-blockreader-messageport = { version = "0.0.2-rc.3" }
gibblox-cache = { version = "0.0.2-rc.3" }
gibblox-cache-store-opfs = { version = "0.0.2-rc.3" }
gibblox-casync = { version = "0.0.2-rc.3" }
gibblox-casync-web = { version = "0.0.2-rc.3" }
gibblox-ext4 = { version = "0.0.2-rc.3" }
gibblox-http = { version = "0.0.2-rc.3", default-features = false, features = ["wasm-client"] }
gibblox-pipeline = { version = "0.0.2-rc.3", features = ["web"] }
gibblox-web-worker = { version = "0.0.2-rc.3" }
gibblox-zip = { version = "0.0.2-rc.3" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gobblytes-core = { version = "0.0.2-rc.3" }
gobblytes-erofs = { version = "0.0.2-rc.3" }
gobblytes-fat = { version = "0.0.2-rc.3" }
js-sys = { workspace = true }
serde_json = "1.0.145"
smoo-host-web-worker = { version = "0.0.2-rc.6" }
url = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Document", "HtmlCollection", "HtmlScriptElement", "Location", "MessageChannel", "Navigator", "Response", "UsbDevice", "Window", "Worker", "WorkerOptions", "WorkerType"] }
