[package]
name = "fastboop-fastboot-rusb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastboop-core = { path = "../fastboop-core" }
futures-channel = { workspace = true }
futures-core = { workspace = true }
rusb = "0.9.4"
tracing = "0.1.41"

[features]
default = []
