[package]
name = "fastboop-fastboot-webusb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastboop-core = { path = "../fastboop-core" }
futures-channel = "0.3.31"
futures-core = { workspace = true }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
js-sys = "0.3.76"
web-sys = { version = "0.3.76", features = ["Navigator", "Usb", "UsbAlternateInterface", "UsbConfiguration", "UsbDevice", "UsbDeviceFilter", "UsbDeviceRequestOptions", "UsbDirection", "UsbEndpoint", "UsbEndpointType", "UsbInTransferResult", "UsbInterface", "UsbOutTransferResult", "UsbTransferStatus", "Window"] }
