[package]
name = "fastboop-fastboot-webusb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastboop-core = { path = "../fastboop-core" }
futures-channel = { workspace = true }
futures-core = { workspace = true }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.49"
js-sys = { workspace = true }
web-sys = { version = "0.3.76", features = ["Navigator", "Usb", "UsbAlternateInterface", "UsbConfiguration", "UsbDevice", "UsbDeviceFilter", "UsbDeviceRequestOptions", "UsbDirection", "UsbEndpoint", "UsbEndpointType", "UsbInTransferResult", "UsbInterface", "UsbOutTransferResult", "UsbTransferStatus", "Window"] }
