[package]
name = "fastboop-fastboot-webusb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebUSB transport adapter for fastboop fastboot sessions."

[dependencies]
fastboop-core = { path = "../fastboop-core", version = ">=0.0.1-rc.1" }
futures-channel = { workspace = true }
futures-core = { workspace = true }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["Navigator", "Usb", "UsbAlternateInterface", "UsbConfiguration", "UsbDevice", "UsbDeviceFilter", "UsbDeviceRequestOptions", "UsbDirection", "UsbEndpoint", "UsbEndpointType", "UsbInTransferResult", "UsbInterface", "UsbOutTransferResult", "UsbTransferStatus", "Window"] }
