[package]
name = "fastboop-rootfs-erofs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.91"
async-trait = "0.1.89"
fastboop-core = { path = "../fastboop-core" }
gibblox-paged-lru = { path = "../../gibblox/crates/gibblox-paged-lru", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gibblox-core = { path = "../../gibblox/crates/gibblox-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gibblox-core = { path = "../../gibblox/crates/gibblox-core", features = ["std"] }
