[package]
name = "fastboop-rootfs-erofs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fastboop-core = { path = "../fastboop-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gibblox-core = { path = "../../gibblox/crates/gibblox-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gibblox-core = { path = "../../gibblox/crates/gibblox-core", features = ["std"] }
