[package]
name = "fastboop-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }
schemars = { version = "0.8.21", optional = true, features = ["preserve_order"] }

[features]
default = []
std = ["serde/std"]
schema = ["std", "schemars"]
