[package]
name = "fastboop-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Stateful fastboop boot session orchestration primitives."

[features]
default = []

[dependencies]
async-trait = { workspace = true }
fastboop-core = { path = "../fastboop-core", version = "0.0.1-rc.12" }
fastboop-stage0-generator = { path = "../fastboop-stage0-generator", version = "0.0.1-rc.12" }
gibblox-core = { version = "0.0.2-rc.3", default-features = false }
gibblox-ext4 = { version = "0.0.2-rc.3" }
gobblytes-core = { version = "0.0.2-rc.3" }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
tracing = { version = "0.1.44", default-features = false }
