[package]
name = "fastboop-stage0-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
dtoolkit = { version = "0.1.1", features = ["write"] }
fastboop-core = { path = "../fastboop-core" }
miniz_oxide = { version = "0.8.9", default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.7.3", default-features = false }
tracing = { version = "0.1.44", default-features = false }

[features]
default = []
std = []
