[package]
name = "fastboop-stage0-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dtoolkit = { version = "0.1.1", features = ["write"] }
fastboop-core = { path = "../fastboop-core" }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
miniz_oxide = { version = "0.8.9", default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.7.3", default-features = false }
tracing = { version = "0.1.44", default-features = false }

[features]
default = []
std = []
