[package]
name = "fastboop-stage0-generator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Builds fastboop stage0 payloads from upstream rootfs artifacts."

[dependencies]
dtoolkit = { version = "0.1.1", features = ["write"] }
fastboop-core = { path = "../fastboop-core", version = ">=0.0.1-rc.1" }
gobblytes-core = { version = ">=0.0.1-rc.8" }
futures-util = { workspace = true, features = ["alloc"] }
miniz_oxide = { version = "0.8.9", default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.7.3", default-features = false }
tracing = { version = "0.1.44", default-features = false }

[features]
default = []
std = []
