[package]
name = "fastboop-stage0"
version = "0.1.0"
edition = "2024"

[dependencies]
fastboop-core = { path = "../fastboop-core" }
fdt = { version = "0.1.5", default-features = false }
miniz_oxide = { version = "0.8.9", default-features = false, features = ["with-alloc"] }
ruzstd = { version = "0.7.3", default-features = false }
tracing = { version = "0.1.44", default-features = false }

[features]
default = []
std = []
