[package]
name = "smoo-host-blocksource-gibblox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
gibblox-core = { path = "../../gibblox/crates/gibblox-core" }
smoo-host-core = { path = "../../smoo/crates/smoo-host-core" }
